# saltybot

./: compose.yml
initdb/: 1_create_database_and_user.sh  2_create_table.sh
recorder/: Cargo.toml  Dockerfile  sqlx-data.json
recorder/src/: lib.rs  main.rs
