[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json","rustls-tls"] }
serde = {version = "1.0.152", features = ["derive"] }
sqlx = {version = "0.6.2",  features = ["runtime-tokio-rustls", "postgres", "offline"] }
tokio = {version = "1.24.2", features = ["rt","macros"] }


